fix: Update new-api image reference in Docker Compose configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ version: "3.4" # For compatibility with older Docker versions
 
 services:
   new-api:
-    image: solidrock-do-it/write-ai-api:latest
+    image: calciumion/new-api:latest
     container_name: new-api
     restart: always
     command: --log-dir /app/logs
