--- a/.github/workflows/write-ai-api-build-and-push.yml
+++ b/.github/workflows/write-ai-api-build-and-push.yml
@@ -42,5 +42,5 @@ jobs:
           file: Dockerfile
           push: true
           tags: |
-            stonesolid/new-api:${{ env.TAG }}
-            stonesolid/new-api:latest
+            stonesolid/write-ai-api:${{ env.TAG }}
+            stonesolid/write-ai-api:latest
